# phantasm-renderer

./: Backend.md  CMakeLists.txt  LICENSE  README.md
src/phantasm-renderer/: Buffer.cc  Buffer.hh  BufferView.hh  CompiledFrame.cc  CompiledFrame.hh  ComputePass.cc  ComputePass.hh  ComputePipeline.cc  ComputePipeline.hh  Context.cc  Context.hh  Device.hh  FragmentShader.hh  Frame.cc  Frame.hh  Framebuffer.cc  Framebuffer.hh  GraphicsPass.cc  GraphicsPass.hh  Image.cc  Image.hh  ImageView.hh  Pass.cc  Pass.hh  PrimitivePipeline.cc  PrimitivePipeline.hh  Queue.hh  Shader.hh  VertexShader.hh  View.hh  argument.cc  argument.hh  backends.cc  backends.hh  default_config.hh  enums.hh  format.hh  fragment_type.hh  fwd.hh  image_view_type.hh  (+15 more)
src/phantasm-renderer/backend/: Backend.hh  BackendInterface.hh  arguments.hh  command_stream.hh  commands.hh  config.hh  fwd.hh  gpu_info.cc  gpu_info.hh  limits.hh  types.hh  window_handle.hh
src/phantasm-renderer/backend/assets/: image_loader.cc  image_loader.hh  mesh_loader.cc  mesh_loader.hh  vertex_attrib_info.hh
src/phantasm-renderer/backend/d3d12/: Adapter.cc  Adapter.hh  BackendD3D12.cc  BackendD3D12.hh  CommandList.cc  CommandList.hh  Device.cc  Device.hh  DynamicBufferRing.cc  DynamicBufferRing.hh  Fence.cc  Fence.hh  Queue.cc  Queue.hh  ResourceViewHeaps.cc  ResourceViewHeaps.hh  RootSignature.cc  RootSignature.hh  StaticBufferPool.cc  StaticBufferPool.hh  Swapchain.cc  Swapchain.hh  UploadHeap.cc  UploadHeap.hh  adapter_choice_util.cc  adapter_choice_util.hh  cmd_list_translation.cc  cmd_list_translation.hh  d3d12_config.hh  pipeline_state.cc  pipeline_state.cc.autosave  pipeline_state.hh  root_signature.cc  root_signature.hh  shader.cc  shader.hh  shader_table_construction.cc  shader_table_construction.hh
src/phantasm-renderer/backend/detail/: Ring.hh  byte_util.hh  cache_map.hh  format_size.hh  hash.hh  incomplete_state_cache.cc  incomplete_state_cache.hh  linked_pool.hh  log_util.cc  log_util.hh  lru_cache.hh  page_allocator.hh  renderdoc_loader.cc  resource_state.hh  spmc_cache.hh  string_array_util.cc  string_array_util.hh  tiny_obj_loader.hh  (+2 more)
src/phantasm-renderer/common/: api.hh  circular_buffer.hh  gpu_epoch_tracker.cc  gpu_epoch_tracker.hh  growing_writer.cc  growing_writer.hh  hash.hh  hashable_storage.hh  log.hh  lru_cache.hh  lru_cache.hh.autosave  multi_cache.hh  murmur_hash.cc  murmur_hash.hh  resource_info.hh  single_cache.hh  state_info.hh
src/phantasm-renderer/detail/: auto_destroyer.cc  auto_destroyer.hh  backends.cc  backends.hh  deferred_destruction_queue.cc  deferred_destruction_queue.hh
src/phantasm-renderer/reflection/: gpu_buffer_alignment.cc  gpu_buffer_alignment.hh  resources.hh  vertex_attributes.hh
(+178 files in other folders)
